# endo-project

./: README.md  configEndoscope.xml  configWebcam.xml
CalibPicGrabber/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
EndoGUI_A/: CMakeLists.txt  CMakeLists_with_pcl.txt  ControlWidget.cpp  ControlWidget.h  EndoLaser.cpp  EndoLaser.h  EndoModel.cpp  EndoModel.h  LinAlg.h  MCUControlWidget.cpp  MCUControlWidget.h  MainWindow.cpp  MainWindow.h  ScanClass.cpp  ScanClass.h  Serial.cpp  Serial.h  SerialComPort.cpp  SerialComPort.h  Vision.cpp  Vision.h  WebcamControlWidget.cpp  WebcamControlWidget.h  defines.h  imageUtil.h  main.cpp  mainWidget.cpp  mainWidget.h  qlightwidget.cpp  qlightwidget.h  uditha_ptcld.cpp
EndoScannerArduinoFirmware/: EndoScannerArduinoFirmware.ino  GCodeInterpreter.cpp  GCodeInterpreter.h  Laser.cpp  Laser.h  configuration.h
EndoScannerArduinoFirmware/interruptCode/: interruptCode.ino
EndoScannerArduinoFirmware/laseron/: laseron.ino
Firmware/: GCodeInterpreter.cpp  GCodeInterpreter.h  Laser.cpp  Laser.h  Serial.cpp  Serial.h  configuration.h  serialCom.h
LaserTest/: CMakeLists.txt  Vision.cpp  Vision.h  main.cpp  originalMain.cpp  thresholdget.cpp
Rom File/: laser.crm  laser.rom  laserTool.rom
ToolDefinitions/: C#001.6DA  Camera.rom  EndoLaser.rom  Laser.rom  endo_tool.crm  laser_green.crm  laser_green.rom  laser_red.crm  laser_red.rom  phantomTool.rom
atoitest/: atoitest.ino
int_string/: int_string.ino
isCommFunctioning/: isCommFunctioning.ino  testheader.h
notebooks/.ipynb_checkpoints/: Camera calibration-checkpoint.ipynb  Introduction-checkpoint.ipynb
