PROJECT( PicGrabber )

CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY)

set( CMAKE_INCLUDE_CURRENT_DIR ON )

FIND_PACKAGE(Qt5 REQUIRED COMPONENTS Widgets OpenGL Core Gui Multimedia MultimediaWidgets)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTOUIC ON)
SET(CMAKE_AUTORCC ON)



FIND_PACKAGE(OpenCV REQUIRED NO_MODULE)



ADD_EXECUTABLE(PicGrabber
	
	main.cpp
	MainWindow.cpp
	MainWindow.h
	)

TARGET_LINK_LIBRARIES (PicGrabber
	Qt5::Widgets
	Qt5::OpenGL
	Qt5::Core
	Qt5::Gui
	Qt5::MultimediaWidgets
	Qt5::Multimedia
	Strmiids
	${OpenCV_LIBS}
)