PROJECT( LaserTest )

CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY)

set( CMAKE_INCLUDE_CURRENT_DIR ON )

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTOUIC ON)
SET(CMAKE_AUTORCC ON)



FIND_PACKAGE(OpenCV REQUIRED NO_MODULE)

ADD_EXECUTABLE(LaserTest
	main.cpp
	)

TARGET_LINK_LIBRARIES (LaserTest
	${OpenCV_LIBS}
)